# analytics-ai-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  compose.yaml  pyproject.toml
.ai/prompts/: bug-fix.md  fix-review-comments.md  generate-tests.md  implement-pr.md  refactor.md  review-pr.md
.github/: README.md
.github/workflows/: ci.yml
agents/: README.md
agents/evaluation/: README.md
agents/policies/: README.md
agents/workflows/: README.md
alembic/: env.py
alembic/versions/: 0001_initial_empty.py
backend/: .env.example  README.md  __init__.py  main.py
backend/composition/: README.md  __init__.py  bootstrap.py  container.py  http.py  settings.py
backend/infrastructure/: __init__.py
backend/modules/: README.md
backend/shared/: __init__.py  correlation.py  logging.py
connectors/: README.md
deployment/: Dockerfile.backend  README.md
docs/: README.md
docs/adr/: ADR-001-clean-architecture.md  ADR-002-modular-monolith.md  ADR-003-postgresql.md  ADR-004-fastapi.md  ADR-005-react.md  ADR-006-provider-agnostic-llm.md  ADR-007-semantic-knowledge-layer.md  ADR-008-docker.md  README.md
docs/api/: README.md
docs/architecture/: ai-architecture.md  api-design.md  architecture.md  data-model.md  domain-events.md  domain-model.md  entity-relationships.md  folder-structure.md  implementation-readiness-review.md  interfaces.md  module-design.md  public-contracts.md  security-model.md  sequence-diagrams.md  state-diagrams.md
docs/development/: ci-cd.md
docs/engineering/: README.md  coding-standards.md  database-development.md  design-principles.md  testing-strategy.md
docs/governance/: README.md  codex-rules.md
docs/knowledge/: semantic-knowledge-layer.md
docs/meetings/: README.md
docs/operations/: README.md  deployment.md  development-setup.md  maintainability.md  performance.md  scalability.md  security.md
docs/product/: PRD.md  README.md  vision.md
docs/prompts/: README.md
docs/reference/: README.md  glossary.md
docs/research/: README.md
docs/roadmap/: MASTER_CHECKLIST.md  README.md  roadmap.md
frontend/: .env.example  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  tsconfig.json  vitest.config.ts
frontend/src/: README.md  main.tsx
infrastructure/: README.md
knowledge/: README.md
knowledge/examples/: README.md
knowledge/glossary/: README.md
knowledge/kpis/: README.md
knowledge/schema/: README.md
knowledge/validation/: README.md
prompts/: README.md
prompts/analytics/: README.md
prompts/architecture/: README.md
prompts/coding/: README.md
scripts/: README.md
tests/: README.md  conftest.py  test_database_infrastructure.py  test_health.py
(+53 files in other folders)
