[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ai-analytics-platform"
version = "0.1.0"
description = "A governed, provider-agnostic AI analytics platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "bandit[toml]>=1.8.0",
  "mypy>=1.15.0",
  "pre-commit>=4.0.0",
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend"]
extend-exclude = [".git", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.mypy]
python_version = "3.12"
files = ["backend"]
strict = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
pretty = true
exclude = ["(^|/)tests(/|$)"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "backend"]
python_files = ["test_*.py"]
addopts = "--strict-config --strict-markers"

[tool.coverage.run]
branch = true
source = ["backend"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = ["B101"]
