[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ai-analytics-platform"
version = "0.1.0"
description = "A governed, provider-agnostic AI analytics platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "uvicorn[standard]>=0.32,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[dependency-groups]
dev = [
  "black>=25.0.0",
  "httpx>=0.28.0",
  "isort>=6.0.0",
  "mypy>=1.15.0",
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.15.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["backend"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.mypy]
python_version = "3.12"
files = ["backend"]
strict = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--strict-config --strict-markers"

[tool.coverage.run]
branch = true
source = ["backend"]

[tool.coverage.report]
show_missing = true
